--- a/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
+++ b/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
@@ -28,7 +28,7 @@
 	</div>
 	<div class="jumbotron">
 		<h1>Home</h1>
-		<p>Some static content-CI/CD works perfect</p>
+		<p>Some static content-CI/CD works perfect,New one</p>
 		<p>
           <a class="btn btn-lg btn-primary" href="#navbar" role="button">Go &raquo;</a>
         </p>
