--- a/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
+++ b/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Static</title>
+ <title>Sample "Hello, World" Application</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css"
 	href="webjars/bootstrap/3.0.3/css/bootstrap.min.css" />
@@ -28,9 +28,9 @@
 	</div>
 	<div class="jumbotron">
 		<h1>Home</h1>
-		<p>Some static content-CI/CD works perfect,New one</p>
+		<p>Welcome to cloud Enabled website</p>
 		<p>
-          <a class="btn btn-lg btn-primary" href="#navbar" role="button">Go &raquo;</a>
+          <a class="btn btn-lg btn-primary" href="#navbar" role="button">Awsome &raquo;</a>
         </p>
 	</div>
 	<script type="text/javascript"
