--- a/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
+++ b/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
@@ -1,39 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
- <title>Sample "Hello, World" Application</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css"
-	href="webjars/bootstrap/3.0.3/css/bootstrap.min.css" />
-</head>
-<body>
-	<script type="text/javascript"
-		src="webjars/jquery/2.0.3/jquery.min.js"></script>
-	<div id="navbar" class="navbar navbar-default" role="navigation">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse"
-				data-target=".navbar-collapse">
-				<span class="icon-bar"></span> <span class="icon-bar"></span> <span
-					class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand"
-				href="https://github.com/spring-projects/spring-boot"> Spring Boot
-			</a>
-		</div>
-		<div class="navbar-collapse collapse">
-			<ul class="nav navbar-nav">
-				<li><a href="./"> Home </a></li>
-			</ul>
-		</div>
-	</div>
-	<div class="jumbotron">
-		<h1>Home</h1>
-		<p>Welcome to cloud Enabled website</p>
-		<p>
-          <a class="btn btn-lg btn-primary" href="#navbar" role="button">Awsome &raquo;</a>
-        </p>
-	</div>
-	<script type="text/javascript"
-		src="webjars/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-</body>
+ <html>
+  <head>
+    <title>Sample "Hello, World" Application</title>
+  </head>
+  <body bgcolor=white>
+
+    <table border="0" cellpadding="10">
+      <tr>
+        <td>
+          <img src="logo.png">
+        </td>
+        <td>
+          <h1>"I am web 1 from california"</h1>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
