--- a/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
+++ b/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
  <html>
   <head>
-    <title>Sample "Hello, World" Application</title>
+    <title>Static</title>
   </head>
   <body bgcolor=white>
 
