--- a/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
+++ b/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
@@ -139,7 +139,7 @@
 			</div>
 			<footer id="footer">
 				<div id="footer-inner">
-					<p>&copy; Copyright <a href="#">Your Site</a> &#124; <a href="#">Terms of Use</a> &#124; <a href="#">Privacy Policy</a></p>
+					<p>&copy; Copyright <a href="#">Your Site</a> &#124; <a href="#">Terms and conditions</a> &#124; <a href="#">Privacy Policy</a></p>
 					<div class="clr"></div>
 					
 
