--- a/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
+++ b/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
@@ -90,7 +90,7 @@
 			</header>
 			<div class="feature">
 				<div class="feature-inner">
-				<h1>Cloud Enabled</h1>
+				<h1>Mindtree</h1>
 				</div>
 			</div>
 		
